# drone_control

./: CMakeLists.txt  README.md  package.xml
launch/: demo.launch
models/1DOF/: model.config  model.sdf
src/: drone_control.cpp  revolute_control.cpp
src/plugins/: CMakeLists.txt  revolute_control_plugin.cc
worlds/: 1DOF.world
